Closed Bug 1269646 Opened 8 years ago Closed 8 years ago

Assertion failure: mStatus == eInitialized @ mozilla::dom::Console::Method

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox48 --- fixed
firefox49 --- fixed

People

(Reporter: bc, Assigned: baku)

References

()

Details

(Keywords: assertion, regression)

Attachments

(2 files, 2 obsolete files)

Attached file stack linux x86_64
1. http://m.babel.com/visit
   You may need to use a private window since this is otherwise not reproducible 
   after the first load.

2. Assertion failure: mStatus == eInitialized, at /mozilla/builds/nightly/mozilla/dom/base/Console.cpp:1281

#01: mozilla::dom::Console::Method(JSContext*, mozilla::dom::Console::MethodName, nsAString_internal const&, mozilla::dom::Sequence<JS::Value> const&) (/mozilla/builds/nightly/mozilla/dom/base/Console.cpp:1281 (discriminator 1))

Aurora/48, Nightly/49 on Linux, Windows at least according to Bughunter.

This has been a fairly common exception on the sites Bughunter tests though not always with this Console::Method frame in the stack.
Assignee: nobody → amarchesini
Attached patch console.patch (obsolete) — Splinter Review
This is interesting. The website does:

foo.prototype.onDestroy = function() { console.error("something"); }

This 'onDestroy' is executed after inner-window-destroyed.
Attachment #8748082 - Flags: review?(bugs)
Attached file script (obsolete) —
Attached patch console.patchSplinter Review
Attachment #8748082 - Attachment is obsolete: true
Attachment #8748084 - Attachment is obsolete: true
Attachment #8748082 - Flags: review?(bugs)
Attachment #8748086 - Flags: review?(bugs)
Comment on attachment 8748082 [details] [diff] [review]
console.patch

Feels error prone to add IsShuttingDown() check for all the callers of Method(). Why not do the check just in Method() and in ProfileMethod()?
Attachment #8748082 - Attachment is obsolete: false
Attachment #8748086 - Flags: review?(bugs) → review+
https://hg.mozilla.org/mozilla-central/rev/cc1443870a87
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Should we wontfix this for earlier branches than 49? Or is this a good patch for uplift?
Flags: needinfo?(amarchesini)
Attachment #8748082 - Attachment is obsolete: true
Flags: needinfo?(amarchesini)
Comment on attachment 8748086 [details] [diff] [review]
console.patch

Approval Request Comment
[Feature/regressing bug #]:
[User impact if declined]: a crash for debug builds
[Describe test coverage new/current, TreeHerder]: race condition.
[Risks and why]: We didn't consider the shutting down state for any method call.
[String/UUID change made/needed]: none
Attachment #8748086 - Flags: approval-mozilla-aurora?
Comment on attachment 8748086 [details] [diff] [review]
console.patch

Fix for crash on dbg builds, Aurora48+
Attachment #8748086 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: