Bug 1269646 - Console API should be NOP after window-inner-destroyed, r=smaug